k8s/apps/qdrant/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`qdrant.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    # REST API (API キー)
    - kind: Rule
      match: Host(`qdrant.starry.blue`)
      priority: 10
      services:
        - name: qdrant
          port: http

    # Web UI (Authentik)
    - kind: Rule
      match: Host(`qdrant.starry.blue`) && PathPrefix(`/dashboard`)
      priority: 20
      services:
        - name: qdrant
          port: http
      middlewares:
        - name: forward-auth-authentik
          namespace: authentik

    - kind: Rule
      match: Host(`qdrant.starry.blue`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 25
      services:
        - name: authentik-server
          namespace: authentik
          port: http
